<?xml version="1.0"?>
<package format="2">
  <name>teleop_joystick_control</name>
  <version>0.0.1</version>
  <description>Simple subscriber and publisher for interpreting joystick data into commands for the robot</description>

  <maintainer email="programmers@team900.org">FRC Team 900 Programmers</maintainer>
  <author email="programmers@team900.org">FRC Team 900 Programmers</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>behavior_actions</depend>
  <depend>cmake_modules</depend>
  <depend>control_msgs</depend>
  <depend>controllers_2019_msgs</depend>
  <depend>controllers_2020_msgs</depend>
  <depend>frc_msgs</depend>
  <depend>std_srvs</depend>
  <depend>roscpp</depend>
  <depend>talon_state_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>dynamic_reconfigure_wrapper</depend>

  <export>
  </export>
</package>
