<?xml version="1.0"?>
<package format="2">
  <name>teleop_joystick_control</name>
  <version>0.0.1</version>
  <description>Simple subscriber and publisher for interpreting joystick data into commands for the robot</description>

  <maintainer email="programmers@team900.org">FRC Team 900 Programmers</maintainer>
  <author email="programmers@team900.org">FRC Team 900 Programmers</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>angles</depend>
  <depend>behavior_actions</depend>
  <depend>cmake_modules</depend>
  <depend>control_msgs</depend>
  <depend>controllers_2022_msgs</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>dynamic_reconfigure_wrapper</depend>
  <depend>field_obj</depend>
  <depend>frc_msgs</depend>
  <depend>imu_zero</depend>
  <depend>path_follower_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>talon_state_msgs</depend>
  <depend>talon_swerve_drive_controller</depend>
  
  <export>
  </export>
</package>
