<?xml version="1.0"?>
<package>
  <name>chimera_description</name>
  <version>0.0.0</version>
  <description>Sample FRC Swerve Bot</description>

  <maintainer email="programmers@team900.org">FRC900 Programming Team</maintainer>

  <license>BSD</license>

  <author email="programmers@team900.org">FRC900 Programming Team</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <run_depend>gazebo_ros</run_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
    <gazebo_ros gazebo_media_path="${prefix}/.."/>
  </export>
</package>

